--- a/home.html
+++ b/home.html
@@ -35,6 +35,15 @@
             </li>
         </ul>
     </nav>
-    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script> <!--바디태그 끝나기전에 아이콘자바스크립트 코드를 작성-->
+    <div class="my-component">
+        <div class="my-component_coloumn">
+            <img class="my-component_photo" src="../사진/사진1.jpg" />
+            <div class="my-component_text">
+                <h4>저는 박승제입니다.</h4>
+            </div>   
+        </div>    
+        
+    </div>
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script> <!--바디태그 끝나기전에 아이콘자바스크립트 소스코드를 작성-->
 </body>
 </html>
