자기소개페이지 초안완료

--- a/place to visit.html
+++ b/place to visit.html
@@ -12,7 +12,7 @@
             <li class="nav_btn">
                 <a class="nav_link" href="home.html">
                     <i class="far fa-user-circle fa-2x"></i><br />
-                    <sapn class="nav_name">HOME</sapn>
+                    <span class="nav_name">HOME</span>
                 </a>
             </li>
             <li class="nav_btn">
@@ -28,13 +28,32 @@
                 </a>
             </li>
             <li class="nav_btn">
-                <a class="nav_link" href="place to visit.html">
+                <a class="nav_link4" href="place to visit.html">
                     <i class="fas fa-compass fa-2x"></i><br />
                     <span class="nav_name">PLACE TO VISIT</span>
                 </a>
             </li>
         </ul>
     </nav>
+    <div class="place1">
+        <img class="place_cebu1" src="../사진/세부1.jpg" />
+        <img class="place_cebu2" src="../사진/세부2.jpg" />
+        <img class="place_cebu3" src="../사진/세부3.jpg" />
+        <img class="place_cebu4" src="../사진/세부4.jpg" />
+        <img class="place_cebu5" src="../사진/세부5.jpg" />
+    </div>
+    <div class="place2">
+        <img class="place_cam1" src="../사진/캄보디아1.jpg" />
+        <img class="place_cam2" src="../사진/캄보디아2.jpg" />
+        <img class="place_cam3" src="../사진/캄보디아3.jpg" />
+        <img class="place_cam4" src="../사진/캄보디아4.jpg" />
+        <img class="place_cam5" src="../사진/캄보디아5.jpg" />
+        <img class="place_cam6" src="../사진/캄보디아6.jpg" />
+    </div>
+    <div class="place_text">
+        <p class="place_text1">해외여행 다녀온곳 세부랑 캄보디아입니다.</p>
+        <p class="place_text2">코로나 끝나고 여유되면 다른데도 여행가보고싶네요~</p>
+    </div>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </body>
 </html>
