--- a/my values.html
+++ b/my values.html
@@ -7,34 +7,49 @@
     <title>my values</title>
 </head>
 <body>
-    <nav class="nav">
-        <ul class="nav_list">
-            <li class="nav_btn">
-                <a class="nav_link" href="home.html">
-                    <i class="far fa-user-circle fa-2x"></i><br />
-                    <span class="nav_name">HOME</span>
-                </a>
-            </li>
-            <li class="nav_btn">
-                <a class="nav_link" href="my favorite.html">
-                    <i class="far fa-star fa-2x"></i><br />
-                    <span class="nav_name">MY FAVORITE</span>
-                </a>
-            </li>
-            <li class="nav_btn">
-                <a class="nav_link" href="my values.html">
-                    <i class="fas fa-sticky-note fa-2x"></i><br />
-                    <span class="nav_name">MY VALUES</span>
-                </a>
-            </li>
-            <li class="nav_btn">
-                <a class="nav_link" href="place to visit.html">
-                    <i class="far fa-compass fa-2x"></i><br />
-                    <span class="nav_name">PLACE TO VISIT</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+        <nav class="nav">
+            <ul class="nav_list">
+                <li class="nav_btn">
+                    <a class="nav_link" href="home.html">
+                        <i class="far fa-user-circle fa-2x"></i><br />
+                        <span class="nav_name">HOME</span>
+                    </a>
+                </li>
+                <li class="nav_btn">
+                    <a class="nav_link" href="my favorite.html">
+                        <i class="far fa-star fa-2x"></i><br />
+                        <span class="nav_name">MY FAVORITE</span>
+                    </a>
+                </li>
+                <li class="nav_btn">
+                    <a class="nav_link3" href="my values.html">
+                        <i class="fas fa-sticky-note fa-2x"></i><br />
+                        <span class="nav_name">MY VALUES</span>
+                    </a>
+                </li>
+                <li class="nav_btn">
+                    <a class="nav_link" href="place to visit.html">
+                        <i class="far fa-compass fa-2x"></i><br />
+                        <span class="nav_name">PLACE TO VISIT</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="fake"></div>
+    <div class="ma">
+        <div class="values">
+                <div class="values1">
+                    <p>여러가지 경험을 많이 하자 </p>
+                </div>
+                <div class="values2">
+                    <p>항상 도움을 줄 수 있는 사람이 되자 </p>
+                </div>
+                <div class="values3">
+                    <p>경험을 발판삼아 변하는 사람이 되자 </p>
+                </div>
+        </div>
+    </div>
+
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </body>
 </html>
