html,css로 자기소개페이지만들기 초안2
그전에 올린게 css가 포함안돼서 css포함후 다시저장

--- a/my favorite.html
+++ b/my favorite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../-----/css/styles.css" />
     <title>my favorite</title>
     
 </head>
@@ -40,9 +40,9 @@
         <h5 class="favorite_head">MY FAVORITE</h5>
         <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspBOOK</span>
         <div>
-            <img class="favorite_image" src="../사진/부자아빠가난한아빠.jpg" />
-            <img class="favorite_image" src="../사진/로마인이야기.jfif" />
-            <img class="favorite_image" src="../사진/특이점이온다.jpg" />
+            <img class="favorite_image" src="../-----/사진/부자아빠가난한아빠.jpg" />
+            <img class="favorite_image" src="../-----/사진/로마인이야기.jfif" />
+            <img class="favorite_image" src="../-----/사진/특이점이온다.jpg" />
         </div>
         <div class="favorite_imagedsc">
             <div class="favorite_imagedsc1">부자아빠 가난한아빠</div>
@@ -54,9 +54,9 @@
         <h5 class="favorite_head">MY FAVORITE</h5>
         <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspMOVIE</span>
         <div>
-            <img class="favorite_image" src="../사진/글래디에이터.jfif" />
-            <img class="favorite_image" src="../사진/인터스텔라.jpg" />
-            <img class="favorite_image" src="../사진/타짜.jpg" />
+            <img class="favorite_image" src="../-----/사진/글래디에이터.jfif" />
+            <img class="favorite_image" src="../-----/사진/인터스텔라.jpg" />
+            <img class="favorite_image" src="../-----/사진/타짜.jpg" />
         </div>
         <div class="favorite_imagedsc">
              <div class="favorite_imagedsc1">&nbsp&nbsp글래디에이터</div>
@@ -71,19 +71,19 @@
             <div class="my-song_collection">
                 <div class="my-song_photos1">
                     <div class="photo1">
-                        <img class="my-song_photo1" src="../사진/happier.jpg" />
+                        <img class="my-song_photo1" src="../-----/사진/happier.jpg" />
                         <span class="photo1_name">Happier-Ed Sheeran</span>
                     </div>
                     <div class="photo2">
-                        <img class="my-song_photo2" src="../사진/봄인가봐.jpg" />
+                        <img class="my-song_photo2" src="../-----/사진/봄인가봐.jpg" />
                         <span class="photo2_name">봄인가봐-에릭남</span>
                     </div>
                     <div class="photo3">
-                        <img class="my-song_photo3" src="../사진/따뜻해줘.jpg" />
+                        <img class="my-song_photo3" src="../-----/사진/따뜻해줘.jpg" />
                         <span class="photo3_name">따뜻해줘-롱디</span>
                     </div>
                     <div class="photo4">
-                        <img class="my-song_photo4" src="../사진/어떻게지내.jpg" />
+                        <img class="my-song_photo4" src="../-----/사진/어떻게지내.jpg" />
                         <span class="photo4_name">어떻게 지내-오반</span>
                     </div>
                 </div>
@@ -95,19 +95,19 @@
                 </div>
                 <div class="my-song_photos2">
                     <div class="photo5">
-                        <img class="my-song_photo5" src="../사진/2002.jfif" />
+                        <img class="my-song_photo5" src="../-----/사진/2002.jfif" />
                         <span class="photo5_name">Left Right left-Charlie puth</span>
                     </div>
                     <div class="photo6">
-                        <img class="my-song_photo6" src="../사진/goodbye.jfif" />
+                        <img class="my-song_photo6" src="../-----/사진/goodbye.jfif" />
                         <span class="photo6_name">2002-AnneMarie</span>
                     </div>
                     <div class="photo7">
-                        <img class="my-song_photo7" src="../사진/흔한이별.jpg" />
+                        <img class="my-song_photo7" src="../-----/사진/흔한이별.jpg" />
                         <span class="photo7_name">GoodBye-박효신</span>
                     </div>
                     <div class="photo8">
-                        <img class="my-song_photo8" src="../사진/leftrightleft.jfif" />
+                        <img class="my-song_photo8" src="../-----/사진/leftrightleft.jfif" />
                         <span class="photo8_name">흔한이별-허각</span>
                     </div>
                 </div>
@@ -125,9 +125,9 @@
             <h5 class="favorite_head">MY FAVORITE</h5>
             <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspFOOD</span>
             <div>
-                <img class="favorite_image" src="../사진/삼겹살.jpg" />
-                <img class="favorite_image" src="../사진/회.jpg" />
-                <img class="favorite_image" src="../사진/갈비탕.jfif" />
+                <img class="favorite_image" src="../-----/사진/삼겹살.jpg" />
+                <img class="favorite_image" src="../-----/사진/회.jpg" />
+                <img class="favorite_image" src="../-----/사진/갈비탕.jfif" />
             </div>
             <div class="favorite_imagedsc">
                 <div class="favorite_imagedsc1">&nbsp&nbsp&nbsp&nbsp삼겹살</div>
