--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../-----/css/styles.css" />
     <title>home</title>
 </head>
 <body>
@@ -37,26 +37,26 @@
     </nav>
     <div class="my-component">
         <div class="my-component_coloumn">
-            <img class="my-component_photo" src="../사진/사진1.jpg" />
+            <img class="my-component_photo" src="../-----/사진/사진1.jpg" />
             <div class="my-component_text">
                 <h1 class="my-component_dsc1">현재 서울에서 살고있는 26살 박승제입니다 </h1>
                 <p class="my-component_dsc2">이분야와 전혀 다른일을 하다가 프로그래밍에 관심이 생겨 전문적으로 <br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp배워서 커리어전환을 하기위해 Wecode에 지원했습니다.</p>
             </div> 
             <div>
-                <img class="my-component_photo1" src="../사진/풀스택이미지1.jpg" />
+                <img class="my-component_photo1" src="../-----/사진/풀스택이미지1.jpg" />
                 <div class="my-component_text">
                     <p class="my-component_dsc3">프론트엔드, 백엔드 둘다 잘하는 풀스택 개발자가 되는게 꿈이지만 <br />&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp현재는 백엔드를 더 전문성있게 배우고싶습니다.</p>
                 </div>
             </div> 
             <div class="my-component_collection">
-                <img class="my-component_photo2" src="../사진/사진3.jpg" />
-                <img class="my-component_photo3" src="../사진/사진5.jpg" />
-                <img class="my-component_photo4" src="../사진/사진6.jpg" />
-                <img class="my-component_photo5" src="../사진/사진4.jpg" />
-                <img class="my-component_photo6" src="../사진/사진7.jpg" />
-                <img class="my-component_photo7" src="../사진/사진10.jpg" />
-                <img class="my-component_photo8" src="../사진/내방.jpg" />
-                <img class="my-component_photo9" src="../사진/사진11.jpg" />
+                <img class="my-component_photo2" src="../-----/사진/사진3.jpg" />
+                <img class="my-component_photo3" src="../-----/사진/사진5.jpg" />
+                <img class="my-component_photo4" src="../-----/사진/사진6.jpg" />
+                <img class="my-component_photo5" src="../-----/사진/사진4.jpg" />
+                <img class="my-component_photo6" src="../-----/사진/사진7.jpg" />
+                <img class="my-component_photo7" src="../-----/사진/사진10.jpg" />
+                <img class="my-component_photo8" src="../-----/사진/내방.jpg" />
+                <img class="my-component_photo9" src="../-----/사진/사진11.jpg" />
                 <div class="my-component_dsc4">
                     <p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp저는 사람들과 어울리고 놀러다니는거 좋아해요 </p>
                     <p></p>
