--- a/place to visit.html
+++ b/place to visit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../-----/css/styles.css" />
     <title>place to visit</title>
 </head>
 <body>
@@ -36,19 +36,19 @@
         </ul>
     </nav>
     <div class="place1">
-        <img class="place_cebu1" src="../사진/세부1.jpg" />
-        <img class="place_cebu2" src="../사진/세부2.jpg" />
-        <img class="place_cebu3" src="../사진/세부3.jpg" />
-        <img class="place_cebu4" src="../사진/세부4.jpg" />
-        <img class="place_cebu5" src="../사진/세부5.jpg" />
+        <img class="place_cebu1" src="../-----/사진/세부1.jpg" />
+        <img class="place_cebu2" src="../-----/사진/세부2.jpg" />
+        <img class="place_cebu3" src="../-----/사진/세부3.jpg" />
+        <img class="place_cebu4" src="../-----/사진/세부4.jpg" />
+        <img class="place_cebu5" src="../-----/사진/세부5.jpg" />
     </div>
     <div class="place2">
-        <img class="place_cam1" src="../사진/캄보디아1.jpg" />
-        <img class="place_cam2" src="../사진/캄보디아2.jpg" />
-        <img class="place_cam3" src="../사진/캄보디아3.jpg" />
-        <img class="place_cam4" src="../사진/캄보디아4.jpg" />
-        <img class="place_cam5" src="../사진/캄보디아5.jpg" />
-        <img class="place_cam6" src="../사진/캄보디아6.jpg" />
+        <img class="place_cam1" src="../-----/사진/캄보디아1.jpg" />
+        <img class="place_cam2" src="../-----/사진/캄보디아2.jpg" />
+        <img class="place_cam3" src="../-----/사진/캄보디아3.jpg" />
+        <img class="place_cam4" src="../-----/사진/캄보디아4.jpg" />
+        <img class="place_cam5" src="../-----/사진/캄보디아5.jpg" />
+        <img class="place_cam6" src="../-----/사진/캄보디아6.jpg" />
     </div>
     <div class="place_text">
         <p class="place_text1">해외여행 다녀온곳 세부랑 캄보디아입니다.</p>
