html/css로 자기소개만들기 수정

--- a/my favorite.html
+++ b/my favorite.html
@@ -36,8 +36,25 @@
             </li>
         </ul>
     </nav>
+        <nav class="menu_nav">
+            <ul class="menu_nav1">
+                <li class="menu_nav2">
+                    <a class="menu_nav3" href="#favorite_head1">BOOK</a>
+                </li>
+                <li class="menu_nav2">
+                    <a class="menu_nav3" href="#favorite_head2">MOVIE</a>   
+                </li>
+                <li class="menu_nav2">
+                    <a class="menu_nav3" href="#favorite_head3">SONG</a>
+                </li>
+                <li class="menu_nav2">
+                    <a class="menu_nav3" href="#favorite_head4">FOOD</a>
+                </li>
+            </ul>
+        </nav>
+    
     <div class="favorite">
-        <h5 class="favorite_head">MY FAVORITE</h5>
+        <h5 class="favorite_head" id="favorite_head1">MY FAVORITE</h5>
         <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspBOOK</span>
         <div>
             <img class="favorite_image" src="../-----/사진/부자아빠가난한아빠.jpg" />
@@ -47,11 +64,11 @@
         <div class="favorite_imagedsc">
             <div class="favorite_imagedsc1">부자아빠 가난한아빠</div>
             <div class="favorite_imagedsc2">&nbsp&nbsp로마인이야기</div>
-            <div class="favorite_imagedsc3">특이점이온다</div>
+            <div class="favorite_imagedsc3">&nbsp&nbsp&nbsp특이점이온다</div>
         </div>
     </div>
     <div class="favorite">
-        <h5 class="favorite_head">MY FAVORITE</h5>
+        <h5 class="favorite_head" id="favorite_head2">MY FAVORITE</h5>
         <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspMOVIE</span>
         <div>
             <img class="favorite_image" src="../-----/사진/글래디에이터.jfif" />
@@ -61,11 +78,11 @@
         <div class="favorite_imagedsc">
              <div class="favorite_imagedsc1">&nbsp&nbsp글래디에이터</div>
              <div class="favorite_imagedsc2">&nbsp&nbsp&nbsp인터스텔라</div>
-             <div class="favorite_imagedsc3">&nbsp&nbsp&nbsp타짜</div> 
+             <div class="favorite_imagedsc3">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp타짜</div> 
         </div>
     </div>
     <div class="favorite">
-        <h5 class="favorite_head">MY FAVORITE</h5>
+        <h5 class="favorite_head" id="favorite_head3">MY FAVORITE</h5>
         <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspSONG</span>
         <div>
             <div class="my-song_collection">
@@ -122,7 +139,7 @@
     </div>
     <div class="favorite">
         <div class="favorite_last">
-            <h5 class="favorite_head">MY FAVORITE</h5>
+            <h5 class="favorite_head" id="favorite_head4">MY FAVORITE</h5>
             <span class="favorite_thing">&nbsp&nbsp&nbsp&nbspFOOD</span>
             <div>
                 <img class="favorite_image" src="../-----/사진/삼겹살.jpg" />
@@ -131,8 +148,8 @@
             </div>
             <div class="favorite_imagedsc">
                 <div class="favorite_imagedsc1">&nbsp&nbsp&nbsp&nbsp삼겹살</div>
-                <div class="favorite_imagedsc2">&nbsp&nbsp&nbsp&nbsp&nbsp회</div>
-                <div class="favorite_imagedsc3">&nbsp&nbsp&nbsp갈비탕</div>
+                <div class="favorite_imagedsc2">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp회</div>
+                <div class="favorite_imagedsc3">&nbsp&nbsp&nbsp&nbsp&nbsp갈비탕</div>
             </div>
         </div>
     </div>
